// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative log.proto

syntax = "proto3";

package logs;

option go_package = "/proto";

message LogRequest {
  string name = 1;
  string data = 2;
}

message LogResponse {
  bool result = 1;
}

service LogService {
  rpc WriteLog(LogRequest) returns (LogResponse);
}